fix font size on mobile

--- a/index.css
+++ b/index.css
@@ -235,7 +235,7 @@ footer {
         max-width: 300px;
         margin-left: 10%;
         margin-right: auto;
-        font-size: 2em;
+        font-size: 1.5em;
         padding-top: 0;
         padding-bottom: 0;
     }
